replenishment-workshop-challenge/force-app/main/default/objects/Replenishment_Formula__mdt/Replenishment_Formula__mdt.object-meta.xml
<CustomObject>
    <description>Store-type-specific formulas used to calculate replenishment quantities.</description>
    <label>Replenishment Formula</label>
    <pluralLabel>Replenishment Formulas</pluralLabel>
</CustomObject>