replenishment-workshop-challenge/force-app/main/default/objects/Replenishment_Formula__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Business explanation of the replenishment policy.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>