replenishment-workshop-challenge/force-app/main/default/objects/Replenishment_Formula__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>FormulaEval expression that returns a recommended order quantity.</description>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>