replenishment-workshop-challenge/force-app/main/default/objects/Replenishment_Formula__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether the formula can be selected at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>