replenishment-workshop-challenge/force-app/main/default/objects/Replenishment_Formula__mdt/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <description>RetailStore.StoreType value to which this formula applies.</description>
    <label>Store Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>